@@ -62,7 +62,8 @@ typedef enum
 
 typedef enum
 {
-	S2S_CFG_ENABLE_TERMINATOR = 1
+	S2S_CFG_ENABLE_TERMINATOR = 1,
+	S2S_CFG_ENABLE_BLIND_WRITES = 2,
 } S2S_CFG_FLAGS6;
 
 typedef enum
